# apairo_preprocess

./: .gitignore  README.md  pyproject.toml
apairo_preprocess/: __init__.py
apairo_preprocess/odometry/: __init__.py  gicp.py  kissicp.py
apairo_preprocess/traversability/: __init__.py  from_labels.py  from_trajectory.py
examples/: kissicp_odometry.py
tests/: test_kissicp_odometry.py  test_traversability_from_trajectory.py
